syntax = "proto3";

package IvionOnline;

enum Type {
	TYPE_BOOLEAN = 0;
	TYPE_REF_BOOLEAN = 1;
	TYPE_LIST_BOOLEAN = 2;
	TYPE_LIST_REF_BOOLEAN = 3;
	TYPE_REF_LIST_REF_BOOLEAN = 4;
	TYPE_INTEGER = 5;
	TYPE_REF_INTEGER = 6;
	TYPE_LIST_INTEGER = 7;
	TYPE_LIST_REF_INTEGER = 8;
	TYPE_REF_LIST_REF_INTEGER = 9;
	TYPE_VEC2I = 10;
	TYPE_REF_VEC2I = 11;
	TYPE_LIST_VEC2I = 12;
	TYPE_LIST_REF_VEC2I = 13;
	TYPE_REF_LIST_REF_VEC2I = 14;
	TYPE_TERRAIN_TYPE = 15;
	TYPE_REF_TERRAIN_TYPE = 16;
	TYPE_LIST_TERRAIN_TYPE = 17;
	TYPE_LIST_REF_TERRAIN_TYPE = 18;
	TYPE_REF_LIST_REF_TERRAIN_TYPE = 19;
	TYPE_COLOR = 20;
	TYPE_REF_COLOR = 21;
	TYPE_LIST_COLOR = 22;
	TYPE_LIST_REF_COLOR = 23;
	TYPE_REF_LIST_REF_COLOR = 24;
}

message ObjectPath {
    repeated int32 FieldIndecies = 1;
    string FullPath = 2;
    Type Object_type = 3;
}

message Boolean {
	bool Value = 1;
}
message Integer {
	int32 Value = 1;
}
message Vec2i {
	int32 x = 1;
	int32 y = 2;
}
enum Terrain_Type {
	TERRAIN_TYPE_NONE = 0;
	TERRAIN_TYPE_DIFFICULT = 1;
	TERRAIN_TYPE_ENCHANTED = 2;
}
enum Color {
	COLOR_NONE = 0;
	COLOR_GRAY = 1;
	COLOR_BLACK = 2;
	COLOR_RED = 3;
	COLOR_GREEN = 4;
	COLOR_BLUE = 5;
	COLOR_WHITE = 6;
}
